<resources>
    <string name="app_name">fourthLab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Добавить</string>
    <string name="remove_from_cart">Убрать</string>
    <string name="cart">Корзина</string>
    <string name="sum">Итого</string>
    <string name="zero">0</string>
    <string name="name">Название</string>
    <string name="price">Цена</string>
    <string name="amount">Количество</string>

</resources>